# CRUDup

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile.auth  Dockerfile.gateway  README.md  docker-compose.yaml
.sqlx/: query-07bcd90e713b2a13b818aff2f2f7041fd81f0f54bbc59b7fef583e528ab7dac2.json  query-096600589b719b456e5f7d73f3d9b32ea7765d6fce7336d6e0a66e347221f8e0.json  query-49e130ae56e7e087cd05f3b2675601dc87f4238c460117507929c894a1ab6669.json  query-60c9951022e95d23f8589bcdfb165a4d7e1496afe544086d94f8107f5ab968d4.json  query-7708cd59aa608b65a18e3ce33c83ce6fc800f43c61c52968725b4cfd6626c474.json  query-91f647f54f34acb5b602541eaa94ef991d3195fa82f02df5fae1d6e0c702dbd5.json  query-b807d110a25b551741789f1d7f0ba23f60b2fd09d38455e388bd054f635ddb63.json  query-b82c958ade6b8904edae3c1d4df09cd0dd291fef963e8e4686c2cb59003b2976.json  query-cc838215479b96ba5ce2519aa1fc2c24a40bfad8efdb52093307061f410f0a1b.json
_kubernetes/: kustomization.yaml
_kubernetes/deployments/: auth.yaml  gateway.yaml
_kubernetes/operators/: mcrouter.yaml
_kubernetes/services/: auth.yaml  gateway.yaml
_kubernetes/storage/: cache.yaml
auth/: Cargo.toml
auth/src/: main.rs
frontend/: .gitignore  index.html  package-lock.json  package.json  rspack.config.js
frontend/src/: main.tsx  util.ts
frontend/src/components/: App.tsx  Input.tsx
frontend/src/store/: auth.ts  client.ts  index.ts
gateway/: Cargo.toml
gateway/src/: main.rs
migrations/: 20231026201951_initial.sql
schema/: Cargo.toml  build.rs
schema/proto/: auth.proto  gateway.proto
schema/src/: lib.rs
