[package]
name = "auth"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2021"

[dependencies]
argon2 = "0.5"
base64ct = { version = "1.6", features = ["alloc"] }
bb8 = "0.8"
bb8-memcached = "0.5"
chrono = "0.4"
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
rand = "0.8"
schema = { path = "../schema" }
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.33", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = { version = "0.10" }
tonic-health = "0.10"
ulid = "1.1"
