[package]
name = "gateway"
version = "0.1.0"
authors = ["Nick Senger <dev@nsenger.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
log = "0.4"
prost = "0.12"
rand = "0.8"
schema = { path = "../schema" }
tokio = { version = "1.33", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
tonic = { version = "0.10" }
tonic-health = "0.10"
tonic-web = "0.10"
ulid = "1.1"
